- https://github.com/eclipse-syson/syson/issues/965 [export] Fix an issue where downloading of standard libraries pointed at 404 error.
They are now properly downloaded.
Export to textual SysMLv2 is not fully implemented yet so there are still unhandled cases.
- https://github.com/eclipse-syson/syson/issues/998[#998] Fix `Port Usage` labels in diagrams.

=== Improvements

- https://github.com/eclipse-syson/syson/issues/897[#897] [general-view] Add `Concern Definition` to General View diagram.
A new node creation tool is available in the `Requirements` section of the palette, allowing the creation of `Concern Definition` objects.
A new drop node tool is available on the diagram, allowing representing `Concern Definition` objects as nodes of the diagram.
- https://github.com/eclipse-syson/syson/issues/899[#899] [general-view] Add `Concern Usage` to General View diagram.
A new node creation tool is available in the `Requirements` section of the palette, allowing the creation of `Concern Usage` objects.
A new drop node tool is available on the diagram, allowing representing `Concern Usage` objects as nodes of the diagram.
- https://github.com/eclipse-syson/syson/issues/936[#936] [general-view] Add compartment for the 'StakeholderParameter' of `Concern Definition`, `Concern Usage`, `Requirement Definition`, `Requirement Usage` to the General View diagram.
In the palette of the 'stakeholders' compartment, the creation tool 'New Stakeholder' allows selecting an `Item Usage` or `Item Definition` to add as stakeholder.
- https://github.com/eclipse-syson/syson/issues/941[#941] [details] Prevent edition of imported user libraries from the details view.
- https://github.com/eclipse-syson/syson/issues/946[#946] [metamodel] Align metamodel to SysMLv2 and KerML Beta 2.3 specifications.
The changes are:
* TransitionUsage
** new operation `sourceFeature() : Feature`
* New class TerminateActionUsage
** with new derived reference `terminatedOccurrenceArgument : Expression`